fixed modal images not showing.

--- a/client/src/components/JobModal.css
+++ b/client/src/components/JobModal.css
@@ -1,5 +1,8 @@
 .detail-logo {
-    height: 30px;
+    height: 50px;
+    position: absolute;
+    right: 20px;
+    top: 35px;
     width: auto;
-    float: right;
+    z-index: 2;
 }
